# APIVentesBC

./: Dockerfile  pyproject.toml
MachineLearningExt/: Default Publisher_MachineLearningExt_1.0.0.0.app  app.json
MachineLearningExt/.alpackages/: Microsoft_Application_26.5.38752.38944.app  Microsoft_System_26.0.41105.0.app
MachineLearningExt/.alpackages/TableExt/: SalesLine.TableExt.al
MachineLearningExt/Codeunit/: MLPredictSales.Codeunit.al
MachineLearningExt/PageExt/: Pag-Ext50100.MLPreditSalesPageExt.al
MachineLearningExt/Python/: 1920-S_sales_data.csv  1929-W_sales_data.csv  2000-S_sales_data.csv  GTE-1000_sales_data.csv  GTE-1001_sales_data.csv  main.py
