[tool.poetry]
name = "APIVentesBC"
version = "0.1.0"
description = "API Machine Learning avec FastAPI"
authors = ["TonNom <jerome.hertzog@ecoles-epsi.net>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
pydantic = "^2.6.2"
uvicorn = "^0.25.0"
numpy = "^1.26.5"
pandas = "^2.1.1"
tensorflow = "^2.15.0"
matplotlib = "^3.8.0"